--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:gravity="center_horizontal"
         android:paddingTop="?attr/actionBarSize"
         >
-        <com.whinc.widget.CustomScrollView
+        <com.qfoxtech.android.widget.CustomScrollView
             android:id="@+id/custom_scrollView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
