--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -66,7 +66,7 @@
         android:visibility="gone"
         tools:visibility="visible"
         >
-        <com.whinc.widget.CustomScrollView
+        <com.qfoxtech.android.widget.CustomScrollView
             android:id="@+id/customScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
